# sentenceslug

./: .gitignore  MANIFEST  README.md  pyproject.toml  setup.cfg  setup.py
sentenceslug/: __init__.py  sentenceslug.py  wordlists.py
