[metadata]
name = sentenceslug
version = 1.1
author = jef79m
author_email = jeff@fuzzknuckle.com
description = Generate random slugs using basic sentence structure
long_description = file: README.md
long_description_content_type="text/markdown",
url = https://github.com/jef79m/sentenceslug
keywords = 
    random
    slug
    sentence
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

[options.entry_points]
console_scripts =
    simple_slug = sentenceslug:simple_slug
    simple_slug_digits = sentenceslug:simple_slug_digits
    make_password = sentenceslug:make_password

